Springboot upgrade to 3.0.2 and also added github actions